--- a/MissionControl/App.config
+++ b/MissionControl/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <appSettings>
+    <add key="server" value="http://localhost:9999" />
+    <add key="launch-code" value="test123" />
+  </appSettings>
 </configuration>
