--- a/MissionControl/packages.config
+++ b/MissionControl/packages.config
@@ -4,4 +4,5 @@
   <package id="MetroFramework.Design" version="1.2.0.3" targetFramework="net452" />
   <package id="MetroFramework.Fonts" version="1.2.0.3" targetFramework="net452" />
   <package id="MetroFramework.RunTime" version="1.2.0.3" targetFramework="net452" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net452" />
 </packages>
