--- a/MissionControl/App.config
+++ b/MissionControl/App.config
@@ -1,10 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+        
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup>
   <appSettings>
-    <add key="server" value="http://localhost:9999" />
-    <add key="launch-code" value="test123" />
+    <add key="server" value="http://localhost:9999"/>
+    <add key="launch-code" value="test123"/>
   </appSettings>
 </configuration>
